fix: adjust logo image margin for better alignment

--- a/css/cervas.css
+++ b/css/cervas.css
@@ -583,6 +583,7 @@ a#logo img {
     width: 100%;
     padding: 5rem 0 4rem 0;
     height: 100%;
+    margin-top: -2rem;
 }
 
 
